-replaced fix Command Initiator "/" with constant in Command -replaced most \n with System.lineSeperator() -fixed package names to all lower-case -readded some Packets -added GuestPacket -added IChatActor -moved Network infrastructure to BBLib BasicChat -made some Fields final -readded logging ChatActor -changed default Clientname could cause renaming on connect to fail BasicCommandRegistry -fixed possible NullPointer cause Command -changed debugModeOnly to isDebugModeOnly DefaultPacketHandler -changed to the handling of Chat Messages IBasicChatPanle -readded println